# io-gmail

./: Cargo.toml  README.md
src/: error.rs  lib.rs  profile.rs  send.rs
src/labels/: create.rs  delete.rs  get.rs  list.rs  update.rs
src/messages/: delete.rs  get.rs  list.rs  mod.rs  modify.rs  send.rs  trash.rs
src/types/: label.rs  message.rs  mod.rs  profile.rs
tests/: base64url.rs  error_parsing.rs  labels.rs  messages_delete.rs  messages_get.rs  messages_list.rs  messages_modify.rs  messages_send.rs  messages_trash.rs  profile.rs  stub_stream.rs
