[package]
name = "io-gmail"
description = "Set of I/O-free coroutines for the Gmail REST API"
version = "0.0.1"
authors = ["metrovoc"]
rust-version = "1.87"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "gmail", "email", "rest"]
repository = "https://github.com/metrovoc/io-gmail"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
http = "1"
io-http = { version = "0.0.3", default-features = false }
io-stream = { version = "0.0.2", default-features = false }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
