[package]
name = "io-gmail"
description = "Set of I/O-free coroutines for the Gmail REST API"
version = "0.0.1"
authors = ["metrovoc"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "gmail", "email", "rest"]
repository = "https://github.com/metrovoc/io-gmail"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
env_logger = "0.11"
io-socket = { version = "0.0.1", default-features = false, features = ["std-stream"] }

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
io-http = { version = "0.0.3", default-features = false }
io-socket = { version = "0.0.1", default-features = false }
log = { version = "0.4", default-features = false }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }

[patch.crates-io]
io-http.git = "https://github.com/pimalaya/io-http"
io-socket.git = "https://github.com/pimalaya/io-socket"
